Fix build issues for Render

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,15 @@
 {
-    "extends": ["next/core-web-vitals", "eslint:recommended"],
-    "rules": {
-      "react/no-unescaped-entities": "off",
-      "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
-    }
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ]
   }
+}
