--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "jest",
+        "test:watch": "jest --watch"
     },
     "dependencies": {
         "@radix-ui/react-checkbox": "^1.1.4",
@@ -29,10 +31,16 @@
         "tailwind-merge": "^3.0.2"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/jest": "^29.5.1",
         "@types/react": "19.0.10",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "postcss": "^8",
         "tailwindcss": "^3.3.0"
     }
