--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "test:watch": "jest --watch"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-label": "^2.1.2",
@@ -24,7 +25,7 @@
         "critters": "^0.0.23",
         "date-fns": "^3.6.0",
         "lucide-react": "^0.477.0",
-        "next": "14.1.0",
+        "next": "^15.2.1",
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.0.1",
